Shift modal resizing and sw fixed

--- a/frontend/src/assets/scss/popup.scss
+++ b/frontend/src/assets/scss/popup.scss
@@ -40,7 +40,7 @@ $color-popup-arrow: black;
     background: white;
     color: black;
     border: 1px solid $color-border;
-    border-radius: 3px;
+    border-radius: 16px;
     box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
     text-align: center;
 }
